<resources>
    <string name="app_name">YoMe</string>
    <string name="title_talks">Partner</string>
    <string name="title_chats">Messages</string>
    <string name="title_profile">Me</string>
    <string name="tab_error_msg">Coming soon</string>
    <string name="facebook_app_id" translatable="false">707912376248312</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb707912376248312</string>
    <string name="facebook_application_id" translatable="false">707912376248312</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb707912376248312</string>
    <string name="txt_ad">AD</string>
    <string name="txt_view_detail">VIEW DETAILS</string>
    <string name="date_day">day</string>
    <string name="date_hour">hour</string>
    <string name="date_minute">minute</string>
    <string name="date_seconds">seconds</string>
    <string name="date_just_now">just now</string>
    <string name="refresh_header_pulldown">pull to refresh</string>
    <string name="refresh_header_refreshing">Refreshing&#8230;</string>
    <string name="refresh_header_loading">Loading&#8230;</string>
    <string name="refresh_header_release">let go to refresh</string>
    <string name="refresh_header_finish">Refresh finished</string>
    <string name="refresh_header_failed">Fail to refresh</string>
    <string name="refresh_header_last_time">Last update M-d HH:mm</string>
    <string name="refresh_header_last_time_type">\'Last update\' M-d HH:mm</string>
    <string name="login_title">YOME</string>
    <string name="login_msg">Best community for you</string>
    <string name="login_welcome">Login with Facebook</string>
    <string name="login_policy">登录即代表你同意<font fgcolor='#ffa833fa'>YOME服务</font>和<font fgcolor='#ffa833fa'>隐私条款</font></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_service">Terms of Service</string>
    <string name="login_success">Login Success</string>
    <string name="login_sign_fail">sign in fails</string>
    <string name="login_server_fail">Interface problem</string>
    <string name="login_failed">Login failed</string>
    <string name="native_lang_title">Native language</string>
    <string name="native_lang_label">I speak</string>
    <string name="popular_language">Popular language</string>
    <string name="language_format">%1$s&#160;(%2$s)</string>
    <string name="target_lang_title">Target language</string>
    <string name="selected_native_language">Native language：</string>
    <string name="target_want_practice">Want to practice</string>
    <string name="target_language_hint">Select from the ones except your native </string>
    <string name="greet_all_title">Explore friends</string>
    <string name="skip">skip</string>
    <string name="wave_to_all">Wave to all</string>
    <string name="online">[online]</string>
    <string name="offline">[offline]</string>
    <string name="native_target_0">%1$s&#160;>&#160;%2$s</string>
    <string name="native_target_1">%1$s&#160;>&#160;%2$s&#160;%3$s</string>
    <string name="native_target_2">%1$s&#160;>&#160;%2$s&#160;%3$s&#160;%4$s</string>
    <string name="default_group">default</string>
    <string name="default_message">Hi, nice to meet you here!</string>
    <string name="greet_all_remind">Language mates we recommand to you, ready to wave?</string>
    <string name="greet_all_sure">Sure</string>
    <string name="greet_all_not_yet">Not yet</string>
    <string name="talks_title">YoMe</string>
    <string name="Chats_title">Chats</string>
    <string name="poppy">Requests</string>
    <string name="chat_image">[Picture]</string>
    <string name="chat_voice">[voice]</string>
    <string name="chat_file">[File]</string>
    <string name="chat_face">[Face]</string>
    <string name="network_disconnected">Network disconnected，Please check</string>
    <string name="talk_error">Fail to wave</string>
    <string name="chat_filter_title">FILTERS</string>
    <string name="native_language">Native language</string>
    <string name="target_language">Target language</string>
    <string name="filter_language_title">Language</string>
    <string name="sure">OK</string>
    <string name="ages_between">Ages between</string>
    <string name="gender">Gender</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="other">Other</string>
    <string name="tags">Tags</string>
    <string name="profile">Profile</string>
    <string name="personalized_lables">Personalized tags</string>
    <string name="label_hint">Adding tags will make it easier to find</string>
    <string name="filter_age">%1$d&#160;-&#160;%2$d</string>
    <string name="edit_title">Edit</string>
    <string name="edit_profile_photo">Photo</string>
    <string name="edit_nick_name">Nickname</string>
    <string name="edit_sign">Description</string>
    <string name="edit_age">Age</string>
    <string name="edit_head_album">Album</string>
    <string name="edit_head_camera">Camera</string>
    <string name="edit_nickname">Edit nickname</string>
    <string name="edit_abstract">Edit Description</string>
    <string name="not_find_photo">Avatar unavailable, please refresh later</string>
    <string name="apply_title">Requests</string>
    <string name="txt_send_message">Send</string>
    <string name="local_time">Local time</string>
    <string name="place_input_right_txt">Please enter the correct sentences</string>
    <string name="chat_delete_success">Delete</string>
    <string name="please_input">Type a message&#8230;</string>
    <string name="chat_not_message_recommend">Yome and third parties can\'t read or listen your messages and calls.</string>
    <string name="set_by_hand">Settings</string>
    <string name="permission_sdcard_require_describe" >Yome needs the permission to access SDcard. Go settings - application - Yome - permissions.</string>
    <string name="permission_sdcard2_require_describe" >Yome needs the permission to access SDcard. Go settings - application - Yome - permissions.</string>
    <string name="toast_request_sdcard">Please give Yome the permission to access your SD card</string>
    <string name="permission_sdcard_require_title">Error</string>
    <string name="toast_request_camera">Give Yome the permission to access album</string>
    <string name="permission_require_camera" >Fail to access ablum</string>
    <string name="permission_camera_require_describe" >Yome needs the permission to access Camera for photoes. Go settings - application - Yome - permissions.</string>
    <string name="permission_addreee_require_describe" >Yome needs the permission to access Contacts for getting your friends. Go settings - application - Yome - permissions.</string>
    <string name="have_sended_friend_apply">Successfully sent</string>
    <string name="friend_apply_agreed">You\'re friends now, let\'s chat.</string>
    <string name="translate_title">Traslation</string>
    <string name="translate_vip_recommend">Open membership and unlock unlimited number of translation privileges</string>
    <string name="please_pruchase_premium">Please purchase premium</string>
    <string name="cor_title">Correction</string>
    <string name="cor_original">original</string>
    <string name="labbel_title">Tags</string>
    <string name="all_tags">All tags</string>
    <string name="label_edit">edit</string>
    <string name="label_save">save</string>
    <string name="label_selected">Selected</string>
    <string name="label_all_tags">All tags</string>
    <string name="edit_ok">OK</string>
    <string name="txt_btn_save">Save</string>
    <string name="edit_cancel">Cancel</string>
    <string name="friends">Friends</string>
    <string name="my_desc">Add intro to show myself to partners</string>
    <string name="friend_delete">Delete</string>
    <string name="friend_cancel">Cancel</string>
    <string name="vip_club">Premium</string>
    <string name="package_share_title">Try free premium</string>
    <string name="package_share_msg">Share YoMe to friend for 1-day premium</string>
    <string name="package_title">Premium</string>
    <string name="package_info_title">You Will Get</string>
    <string name="p_filter_title">Advanced Filters</string>
    <string name="p_filter_msg">Select partners in with gender &amp; tag</string>
    <string name="p_friend_title">Unlimited Friends</string>
    <string name="p_friend_msg">Add friends as many as you want</string>
    <string name="p_translate_title">Pro Translation</string>
    <string name="p_translate_msg">No language barrier and translation limit</string>
    <string name="pg_vip_recommend">You\'re already a member</string>
    <string name="set_title">Settings</string>
    <string name="set_notifi">Notification</string>
    <string name="set_target_language">Target Languages</string>
    <string name="set_term_service">Terms of Service</string>
    <string name="set_privacy_policy">Privacy Policy</string>
    <string name="set_version">Version</string>
    <string name="set_log_out">Log out</string>
    <string name="edit_boy">Male</string>
    <string name="edit_girl">Female</string>
    <string name="edit_age_title">Select Age</string>
    <string name="info_dialog_title">Perfect information</string>
    <string name="info_dialog_msg">Perfect your profile, can increase the friend pass rate, go to perfect the data</string>
    <string name="info_fill_out">Fill out</string>
    <string name="recommend_net_work">Network failed to load, click to refresh the page</string>
    <string name="recommend_empty">No message yet, get your partners first.</string>
    <string name="stay_tuned">Being developed, stay tuned</string>
    <string name="select_except_target">Select from the ones except your target</string>
    <string name="select_except_native">Select from the ones except your native</string>
    <string name="max_chat_num">&#8230;</string>
    <string name="txt_my_personal_information">This is my personal information</string>
    <string name="txt_no_label_selected_toast">At least one tag to show yourself</string>
    <string name="txt_language_selected_limit">Two languages can be selected here</string>
    <string name="txt_select_one_lan">Select at least one language</string>
    <string name="txt_login_tips">Authorization required, please log in again</string>
    <string name="txt_relogin_tips">login…</string>
    <string name="txt_symble_bigger_than"><![CDATA[>]]></string>
    <string name="txt_rate_title">Unlock premium free!</string>
    <string name="txt_rate_desc">5 stars to unlock premium feature for 1 day</string>
    <string name="txt_rate">Rate</string>
    <string name="txt_rate_tips">Thanks, you still have chance to access premium feature</string>
    <string name="txt_need_select_rate">Choose ratings</string>
    <string name="txt_delete_conversion_tips">Once deleted, all the messages will be cleared forever</string>
    <string name="txt_delete_msg">Delete message?</string>
    <string name="txt_reply_to_become_friend">Reply to become friend</string>
    <string name="voice_swipe_up">Swipe up</string>
    <string name="voice_cancel">Release to cancel</string>
    <string name="txt_friendship_tips">Your friendship has been established</string>
    <string name="txt_menu_copy">Copy</string>
    <string name="txt_menu_delete">Delete</string>
    <string name="txt_menu_open">Open</string>
    <string name="txt_menu_share">Share</string>
    <string name="txt_voice_state_0">Hold to talk</string>
    <string name="txt_voice_state_1">Release to finish</string>
    <string name="txt_voice_state_2">Slide up to cancel</string>
    <string name="txt_voice_state_3">Release to cancel</string>
    <string name="txt_login_with_google">Login with Google</string>
    <string name="txt_guide_title_step1">这个APP很国际</string>
    <string name="txt_guide_desc_step1">这有来自100多个国家的小伙伴\n你可以正经学习语言或解闷闲聊</string>
    <string name="txt_start_now">立即体验</string>
</resources>