<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="SpUsage">

    <FrameLayout
        android:id="@+id/flTopSkip"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/action_bar_title_margin_top"
        android:layout_marginBottom="16dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp">

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:fontFamily="sans-serif-medium"
            android:text="@string/skip"
            android:textColor="@color/skip_text_color"
            android:textSize="12dp"
            tools:ignore="SpUsage" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDescTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:textStyle="bold"
                android:text="@string/txt_guide_title_step1"
                android:textColor="@color/label_text"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:text="@string/txt_guide_desc_step1"
                android:textColor="@color/text_des"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/imgStep"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_name"
                tools:src="@color/black50" />

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="64dp"
                android:background="@drawable/phone_login_btn_select_bg"
                android:gravity="center"
                android:paddingLeft="72dp"
                android:paddingRight="72dp"
                android:textStyle="bold"
                android:text="@string/txt_start_now"
                android:textColor="@color/white"
                android:textSize="14dp"
                tools:visibility="visible" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>