<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="end"
    tools:ignore="SpUsage">

    <ImageView
        android:id="@+id/iv_info_cancel"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:padding="5dp"
        android:src="@mipmap/ic_cancel"/>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_write_5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/bg_perfect_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/info_dialog_title"
            android:textColor="@color/label_text"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/info_dialog_msg"
            android:textColor="@color/label_text"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_info_jump"
            android:layout_width="219dp"
            android:layout_height="36dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="22dp"
            android:gravity="center"
            android:background="@drawable/bg_dialog_bt"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/info_fill_out"/>

    </LinearLayout>

</LinearLayout>