<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="SpUsage,RtlCompat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/greet_all_title"
            android:textColor="@color/label_text"
            android:fontFamily="sans-serif-medium"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvLoginSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:layout_marginEnd="11dp"
            android:text="@string/skip"
            android:textColor="@color/text_des"
            android:textSize="14dp" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRecommendList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/greatLoadingView"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            app:indicatorColor="@color/tab_selected_color"
            app:indicatorName="BallPulseIndicator" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvWaveAll"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/wave_to_all"
        android:background="@color/tab_selected_color"
        android:textColor="@color/white"
        android:textSize="18dp"/>

</LinearLayout>