<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage,ContentDescription,RtlSymmetry">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_notifi"
            android:textColor="@color/label_text"
            android:textSize="15dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/imSoundSwitch"
            android:theme="@style/SwitchTheme"
            android:checked = "true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6" />

    <LinearLayout
        android:id="@+id/llTargetLanguage"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="29dp"
        android:paddingLeft="20dp"
        android:paddingRight="29dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_target_language"
            android:textColor="@color/label_text"
            android:textSize="15dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvMyNativeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#999999"
            android:textSize="12dp"
            tools:text="2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/ic_arrow_right_gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6" />

    <LinearLayout
        android:id="@+id/llSetTermService"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_term_service"
            android:textColor="@color/label_text"
            android:textSize="15dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/ic_arrow_right_gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="10dp"
        android:background="#F6F6F6" />

    <LinearLayout
        android:id="@+id/llSetPrivacyPoilcy"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_privacy_policy"
            android:textColor="@color/label_text"
            android:textSize="15dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/ic_arrow_right_gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_version"
            android:textColor="@color/label_text"
            android:textSize="15dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvSetVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/label_text"
            android:textSize="15dp"
            tools:text="1.3.4" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6" />

    <TextView
        android:id="@+id/tvSetLogout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/set_log_out"
        android:textStyle="bold"
        android:textColor="@color/logout_color"
        android:textSize="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F6F6F6" />

</LinearLayout>