<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_splash" />

    <TextView
        android:id="@+id/tvLoginPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/login_policy"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvLoginPolicy"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="281dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="14dp"
            android:background="@drawable/bt_bg_login"
            android:text="@string/login_welcome"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/googleLoginButton"
            android:layout_width="281dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="14dp"
            android:background="@drawable/bt_bg_login_google"
            android:text="@string/txt_login_with_google"
            android:textColor="@color/label_text"/>

        <!--<LinearLayout-->
            <!--android:layout_width="281dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="14dp"-->
            <!--android:background="@drawable/bt_bg_login"-->
            <!--android:gravity="center_horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginEnd="@dimen/dp_12"-->
                <!--android:layout_marginRight="@dimen/dp_12"-->
                <!--android:contentDescription="@string/app_name"-->
                <!--android:src="@drawable/icon_facebook" />-->

            <!--<TextView-->
                <!--android:id="@+id/loginButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="40dp"-->
                <!--android:background="@drawable/bt_bg_login"-->
                <!--android:gravity="start|center_vertical"-->
                <!--android:text="@string/login_welcome"-->
                <!--android:textColor="@color/white" />-->

        <!--</LinearLayout>-->


        <!--<LinearLayout-->
            <!--android:layout_width="281dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="14dp"-->
            <!--android:background="@drawable/bt_bg_login"-->
            <!--android:gravity="center_horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginEnd="@dimen/dp_12"-->
                <!--android:layout_marginRight="@dimen/dp_12"-->
                <!--android:contentDescription="@string/app_name"-->
                <!--android:src="@drawable/icon_google" />-->

            <!--<TextView-->
                <!--android:id="@+id/googleLoginButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:gravity="start|center_vertical"-->
                <!--android:text="@string/txt_login_with_google"-->
                <!--android:textColor="@color/white" />-->

        <!--</LinearLayout>-->

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/llLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/login_msg"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/loginPageLoading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/custom_progress"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>